# birka-llm

./: .env.example  .gitignore  ALL_COMPLETE.md  ARCHITECTURE.md  CHANGELOG.md  COMMANDS.md  COMPLETE.md  CONTRIBUTING.md  DONE.md  FINAL.md  INDEX.md  LICENSE  MIGRATION.md  NEXT_STEPS.md  PROJECT_COMPLETE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_NOW.md  START.md  STRUCTURE.md  SUMMARY.md  check_readiness.py  create_data_for_machine.py  create_model_machine.py  demo.py  migrate.py  pre_commit_check.py  pyproject.toml  requirements.txt  search_with_machine_learning.py  test_eof_fix.py  verify_installation.py
.continue/checks/: dependency-audit.md  docs-freshness.md  rag-config-and-secrets.md  security-review.md  test-coverage.md
.continue/mcpServers/: new-mcp-server-2.yaml
.continue/rules/: refactoring.md  token-optimization.md
.cursor/rules/: architecture.mdc  mail.mdc
.github/workflows/: ci.yml
data_from_gost/: EMBEDDINGS_AND_CACHE.md  GIGACHAT_SETUP.md  README.md  check_profiles.py  create_rag.py  giga_api.py  load_llm.py  run_lln.py  test_gigachat_connection.py
data_from_gost/rag_assistant/: __init__.py  apifreellm_llm.py  assistant.py  giga_get_token.py  llm_types.py  profiles.py
docs/: INSTALLATION.md  README.md
examples/: basic_usage.py  create_index.py  custom_profile.py  gigachat_example.py  multiple_knowledge_bases.py  using_profiles.py
knowledge/: README.md
knowledge/code_guides/: errors-and-fixes.md  features-overview.md  glossary.md  indexing-allowlist.md  input-signals-checklist.md  known-safe-response-patterns.md  limits-and-assumptions.md  module-entrypoints.md  panel-reference.md  qa-eval-checklist.md  question-templates.md  result-artifacts.md  task-file-triage.md  traceback-triage.md  workflows.md
knowledge/examples/: support-response-example.md  task-file-good-case.md  task-file-missing-source.md  (+2 more)
machine_learning_model/: data_tkz_arm.xlsx  data_tkz_equipment.xlsx  data_tkz_err.xlsx
tests/: __init__.py  test_basic.py
(+14 files in other folders)
